# agent_101

./: .env  .gitignore  main.py  pyproject.toml
app/notebooks/: test_nb.ipynb
notebooks/: test_nb.ipynb
src/assistant/: config.py
src/assistant/domain/: article_models.py  orm_models.py  test_user.py
src/assistant/infrastructure/postgres/: init_session.py
