[project]
name = "agent-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "psycopg>=3.2.13",
    "psycopg-binary>=3.2.13",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.4",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
    "supabase>=2.24.0",
]
